--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,141 @@
-.flex-container{
+*{
+    font-family: 'Roboto', sans-serif;;
+}
+.header{
     display: flex;
+    height: 50px;
+    background-color: #1F2937;
+
   }
   
   /* this selector selects all divs inside of .flex-container */
-.flex-container div {
-    background: peachpuff;
-    border: 4px solid brown;
-    height: 100px;
-    /* flex: 1; */
+.header div {
+    flex: 1;
   }
+
+.header .header{
+    font-size:24px;
+    color:#F9FAF8;
+    justify-content:space-around;
+}
+.header .empty{
+    flex-grow:3;
+}
+
+.header .links{
+    font-size:18px;
+    color:#E5E7EB;
+}
+
+
+
+.main-intro{
+    display: flex;
+    height: 460px;
+    background-color:#1F2937;
+}
+
+.main-intro .leftright{
+    display:flex;
+    flex-direction:column;
+    border: 2px solid blue;
+    flex: 1 1 0;
+    justify-content:space-around;
+}
+
+.leftright .top{
+    font-size:48px;
+    color:#F9FAF8;
+    justify-content:space-around;
+}
+
+.leftright .bot{
+    font-size:18px;
+    color:#E5E7EB;
+    justify-content:space-around;
+}
+
+
+
+.random-info{
+    display: flex;
+    flex-direction: column;
+    height:460px;
+
+}
+
+
+.random-info .topbottom{
+    display:flex;
+    border: 2px solid red;
+    flex-direction:row;
+    flex: 1 1 auto;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.topbottom .subtext{
+    display:flex;
+    /* flex: 1; */
+    border: 2px solid green;
+    width:100px;
+    height:200px;
+    flex-direction: column;
+    justify-content:right;
+
+}
+
+.topbottom div{
+    display:flex;
+    /* flex:1; */
+    height:100px;
+    border: 2px solid green;
+}
+
+.quote{
+    display: flex;
+    height:460px;
+    background-color: #E5E7EB;
+    border: 2px solid blue;
+    align-items: center;
+    justify-content: center;
+}
+
+.quote .actualquote{
+    flex-direction: column;
+    display:flex;
+    border: 2px solid blue;
+    width:1000px;
+    height:200px;
+    flex: 1 1 auto;
+    
+}
+.quote .name{
+    display:flex;
+    border: 2px solid blue;
+    width:1000px;
+    height:30px;
+    flex: 1 1 auto;
+    justify-content: right;
+}
+
+.call-to-action{
+    display: flex;
+    height: 440px;
+    flex-direction: row;
+}
+
+.call-to-action div{
+    border: 2px solid red;
+    flex: 1 1 auto;
+}
+
+.copyright{
+    display: flex;
+    height: 100px;
+}
+
+.copyright div{
+    border: 2px solid blue;
+    flex: 1 1 auto;
+}
